--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,8 +5,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.3.1' // تم التحديث إلى الإصدار 8.3.1
-        classpath 'com.google.gms:google-services:4.4.1' // تم التحديث إلى أحدث إصدار
+        classpath "com.android.tools.build:gradle:8.3.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22"
+        classpath 'com.google.gms:google-services:4.4.3' // تم التحديث إلى أحدث إصدار
     }
 }
 
