--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
-
 # IntelliJ related
 *.iml
 *.ipr
@@ -24,6 +23,8 @@ migrate_working_dir/
 #.vscode/
 
 # Flutter/Dart/Pub related
+assets/env/.env
+android/app/src/google-services.json
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
