--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,25 @@ environment:
 dependencies:
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
+  custom_refresh_indicator: ^4.0.1
+  dio: ^5.9.0
   firebase_app_check: ^0.4.0
   flashy_tab_bar2: ^0.0.10
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_dotenv: ^5.2.1
   flutter_launcher_icons: ^0.14.4
   get: ^4.7.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   screen_protector: ^1.4.2+1
+  supabase_flutter: ^2.9.1
+  video_player: ^2.10.0
+  webview_flutter: ^4.13.0
   youtube_player_flutter: ^9.1.1
+  youtube_player_iframe: ^5.2.2
 
 dev_dependencies:
   cloud_firestore: ^6.0.0
@@ -53,7 +60,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   google_sign_in: ^6.2.1
-  
+
 flutter_launcher_icons:
   image_path: "assets/images/LOGO.png"
   image_path_android: "assets/images/LOGO.png"
@@ -70,6 +77,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/env/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
