--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,17 +32,23 @@ dependencies:
   cupertino_icons: ^1.0.8
   custom_refresh_indicator: ^4.0.1
   dio: ^5.9.0
+  excel: ^4.0.6
   firebase_app_check: ^0.4.0
   flashy_tab_bar2: ^0.0.10
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
-  flutter_dotenv: ^5.2.1
+  flutter_dotenv: ^6.0.0
   flutter_launcher_icons: ^0.14.4
   get: ^4.7.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
+  intl: ^0.20.2
+  mobile_scanner: ^7.0.1
+  path_provider: ^2.1.5
+  pdf: ^3.11.3
+  qr_flutter: ^4.1.0
   screen_protector: ^1.4.2+1
   supabase_flutter: ^2.9.1
   video_player: ^2.10.0
@@ -56,7 +62,7 @@ dev_dependencies:
   firebase_core: ^4.0.0
   firebase_messaging: ^16.0.0
   firebase_storage: ^13.0.0
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
   google_sign_in: ^6.2.1
